--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -9,7 +9,7 @@
                             <div class="col-lg-1 col-md-2 col-5">
                                 <h4>Customer <b>{{this.data.Category}}</b> </h4>
                             </div>
-                            <div class="col-lg-2 col-md-4 col-7 mr-md-2 mr-0 ms-md-auto"
+                            <div class="col-xl-2 col-lg-3 col-md-4 col-7 mr-md-2 mr-0 ms-md-auto"
                                 style="display: inherit; height: 20px;margin-top: 1px;color: black;">
                                 <label style="font-size: 14px; margin-right:10px">Visit Date </label>
                                 <input style="border-bottom: 1px solid; height: 19px;width: 95px;" matInput
@@ -610,7 +610,9 @@
                                                                             <mat-icon *ngIf="editCustomer"
                                                                                 class="deletes_icon ms-1"
                                                                                 (click)="deleteSpec(i,'spectacle_rx')">delete_forever</mat-icon>
-                                                                                <i  (click)="customerPowerPDF(i,'spectacle')" class="fa fa-file-pdf pdfpower"></i>
+                                                                                <button (click)="customerPowerPDF(i,'spectacle')"  class="pdfpower  me-1 ms-1"><i class="fa fa-file-pdf"></i></button>
+                                                                                
+                                                                                <button  class="whatsapp  "><i class="fa-brands fa-whatsapp"></i></button>
                                                                         </td>
                                                                         <td class="text-left">{{spectacleLists.length -
                                                                             i }}</td>
