--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -729,10 +729,10 @@
                                                                 *ngIf="t.AreaName !== 'null'">({{t.AreaName}})</span>
                                                         </td>
                                                         <td *ngIf="user.UserGroup === 'CompanyAdmin'" [ngClass]="{'my_class': t.PaymentStatus === 'Unpaid'}">
-                                                            {{t.PurchasePrice * t.Quantity  | number : '1.2-2'}}</td>
+                                                            {{t.PurchasePrice | number : '1.2-2'}}</td>
 
                                                         <td *ngIf="user.UserGroup === 'CompanyAdmin'" [ngClass]="{'my_class': t.PaymentStatus === 'Unpaid'}">
-                                                            {{ t.SubTotal - t.PurchasePrice  * t.Quantity   | number : '1.2-2'}}</td>
+                                                            {{ t.ModifyPurchasePrice | number : '1.2-2'}}</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
