--- a/web1/src/app/report/sale-report/sale-report.component.css
+++ b/web1/src/app/report/sale-report/sale-report.component.css
@@ -27,3 +27,7 @@
     cursor: pointer;
 }
 
+.ex_class {
+    color: rgb(255, 255, 255) !important;
+    background-color: rgb(242, 32, 32) !important;
+}
