--- a/server/views/AssignLensPDF.ejs
+++ b/server/views/AssignLensPDF.ejs
@@ -21,12 +21,12 @@
         <div style="height: 30px;">
             <div style="border-bottom: 1px solid; width: 38%; position:absolute; margin-top: 1%;"> </div>
             <div style="border-bottom: 1px solid; width: 38%; float: right; position: relative; margin-top: 1%;"></div>
-            <span class="headingName">FITTER ORDER</span>
+            <span class="headingName">LENS ORDER</span>
          </div>
     </section>
     <% if(data.productList.length !==0 ){ data.productList.forEach(function (i, index) { %>
         <fieldset style=" margin-bottom: 5%;">
-            <legend> Fitting Details </legend>
+            <legend>  DETAILS </legend>
     <section style="width: 100%; height: 250px;">
             <table style="width: 30%; float: left; border: none; margin-bottom: 2%;">
                <tr>
