--- a/web1/src/app/po/supplier-po/supplier-po.component.html
+++ b/web1/src/app/po/supplier-po/supplier-po.component.html
@@ -84,7 +84,9 @@
                                     <button *ngIf="this.orderComplete === true" class="ms-2" (click)="AssignSupplierPDF()" type="button" mat-raised-button color="warn">
                                         PDF
                                     </button>
-                                   
+                                    <button *ngIf="this.orderComplete  == true" [disabled]="this.supllierPDF === ''"  (click)="sendWhatsapp('')" class="ms-2" type="button" mat-raised-button color="primary">
+                                        Whatsapp
+                                    </button>
                                 </div>
                             </div>
                         </form>
